style: fix subgrid vertical stretch in venn-card

--- a/css/style.css
+++ b/css/style.css
@@ -7889,7 +7889,7 @@ html, body {
   display: grid;
   grid-row: span 5;
   grid-template-rows: subgrid;
-  align-items: start;
+  align-items: stretch;
   box-sizing: border-box;
 }
 
